--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Fuel Consumption Calculator",
   "main": "index.js",
   "scripts": {
+    "start": "npm run open",
+    "open": "concurrently \"http-server -a localhost -p 1234\" \"open http://localhost:1234/sample\"",
     "test": "jest"
   },
   "repository": {
@@ -17,6 +19,8 @@
   },
   "homepage": "https://github.com/storrisi/fuel-consumption-calculator#readme",
   "devDependencies": {
+    "concurrently": "^4.1.0",
+    "http-server": "^0.11.1",
     "jest": "^24.8.0"
   }
 }
